# huggingface-datasets_JGLUE

./: .gitignore  .tagpr  CHANGELOG.md  JGLUE.py  README.md  pyproject.toml
.github/workflows/: ci.yaml  push_to_hub.yaml  release.yaml
tests/: JGLUE_test.py
