[tool.poetry]
name = "huggingface-datasets-jglue"
version = "0.1.0"
description = ""
authors = ["Shunsuke KITADA <shunsuke.kitada.0831@gmail.com>"]
readme = "README.md"
packages = [{include = "huggingface_datasets_jglue"}]

[tool.poetry.dependencies]
python = "^3.9"
datasets = "^2.10.0"


[tool.poetry.group.dev.dependencies]
black = "^23.1.0"
isort = "^5.12.0"
flake8 = "^6.0.0"
mypy = "^1.0.1"
pytest = "^7.2.1"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
