[project]
name = "huggingface-datasets-jglue"
version = "1.1.0"
description = "Dataset loading script for JGLUE: Japanese General Language Understanding Evaluation"
authors = [
    { name = "Shunsuke Kitada", email = "shunsuke.kitada.0831@gmail.com" },
]
readme = "README.md"
requires-python = ">=3.8"
dependencies = [
    "beautifulsoup4>=4.11.2",
    "datasets>=3.0.0",
    "mecab-python3>=1.0.6",
    "mojimoji>=0.0.12",
    "pyknp>=0.6.1",
]

[dependency-groups]
dev = ["mypy>=1.0.0", "pytest>=6.0.0", "ruff>=0.1.5"]

[tool.mypy]
python_version = "3.10"
ignore_missing_imports = true
